# prediction-autoresearch

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  NOTES.md  README.md  kalshi.key  orchestrator.py  prepare.py  program.md  pyproject.toml  results.tsv  train.py
.github/workflows/: autoresearch.yml  ci.yml  collect-data.yml  monitor.yml  train.yml
market/: config.py
market/analysis/: base.py
market/analysis/scripts/: __init__.py  price_distribution.py  volume_analysis.py
market/api/: server.py
market/features/: cache.py  extract.py  sequences.py
market/indexers/: base.py
market/indexers/kalshi/: markets.py  trades.py
market/indexers/polymarket/: markets.py  trades.py
scripts/: download_data.sh  run_analysis.py
tests/: test_config.py  test_features.py  test_sequences.py
