[project]
name = "prediction-autoresearch"
version = "0.1.0"
description = "Autonomous ML research on prediction market data using MLX on Apple Silicon"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "mlx>=0.22.0",
    "numpy>=1.26",
    "tiktoken>=0.8",
    "huggingface-hub>=0.24",
    "duckdb>=1.1",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "brokenaxes>=0.6",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pyarrow>=15.0",
    "tqdm>=4.66",
    "cryptography>=42.0",         # Kalshi API RSA-PSS request signing
    "fastapi>=0.115",             # Prediction API server
    "uvicorn[standard]>=0.32",    # ASGI server for FastAPI
]

[tool.hatch.build.targets.wheel]
packages = ["market"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
